--- a/config
+++ b/config
@@ -8,6 +8,7 @@ CONF="/etc/dnsmasq.custom"    ## dnsmasq custom config (must be sourced by dnsma
                               ## confused? then leave this be!
 
 ### Sources (uncomment desired blocklists) [must be compatible to the hosts file format!] ###
+### Default list is from 1-8 but 1-3 should be enought for most ###
 ##1  MVPS HOSTS (~497k) [default]: source-c2934517
      SOURCES="$SOURCES http://winhelp2002.mvps.org/hosts.txt"
 
